# koi

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  koi.db  pyproject.toml  smoke_langsmith.py
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/api/routes/: accounts.py  auth.py  bizum.py  chat.py  transactions.py
app/core/: config.py  passwords.py  security.py  settings.py
app/data/: accounts.py  bizum.py  transactions.py  users.py
app/db/: database.py  models.py  seed_accounts.py  seed_bizum.py  seed_transactions.py  seed_users.py
app/schemas/: accounts.py  auth.py  bizum.py  chat.py  error.py  transaction.py  user.py
app/services/: chat_router.py  chat_taxonomy.py  intent_agent.py
tests/: conftest.py  test_chat_handle.py  test_chat_intents.py  test_smoke.py
ui/: api_client.py  koi_app.py  state.py
